--- a/06 JavaScript/Task1.html
+++ b/06 JavaScript/Task1.html
@@ -1,68 +1,70 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="utf-8" />
     <title></title>
 </head>
+
 <body>
     <h1>Task 1 - start</h1>
-<script>
+    <script>
 
-       var getByn = function(price){
-        var str = String(price);
+        var getByn = function (price) {
+            var str = String(price);
 
-        switch(str.length){
-            case 1:
-                return "0.0" + str;
-            case 2:
-                return "0." + str;
-            default: 
-                return str.substring(0,str.length-2)+"."+str.substring(str.length-2);
-        }   
-    }
+            switch (str.length) {
+                case 1:
+                    return "0.0" + str;
+                case 2:
+                    return "0." + str;
+                default:
+                    return str.substring(0, str.length - 2) + "." + str.substring(str.length - 2);
+            }
+        }
 
-class Purchase{
-    constructor(name, price, number){
-        this.name = name;
-        this.price = price;
-        this.number = number;
-    }
-    getCost(){
-        return this.price * this.number
-    }
-    toString(){
-      return this.name+";"+getByn(this.price)+";"+this.number+";"+getByn(this.getCost())
-  }
-}
+        class Purchase {
+            constructor(name, price, number) {
+                this.name = name;
+                this.price = price;
+                this.number = number;
+            }
+            getCost() {
+                return this.price * this.number
+            }
+            toString() {
+                return this.name + ";" + getByn(this.price) + ";" + this.number + ";" + getByn(this.getCost())
+            }
+        }
 
-let purchases = [
-    new Purchase("apple", 121, 5),
-    new Purchase("milk", 101, 3),
-    new Purchase("bread", 320, 4),
-    new Purchase("potato", 122, 1)
-    ];
+        let purchases = [
+            new Purchase("apple", 121, 5),
+            new Purchase("milk", 101, 3),
+            new Purchase("bread", 320, 4),
+            new Purchase("potato", 122, 1)
+        ];
 
-document.writeln("<h2>Purchases</h2>");
-for(var i = 0; i < purchases.length;i++){
-    document.writeln("<p>"+purchases[i].toString());
-}
+        document.writeln("<h2>Purchases</h2>");
+        for (var i = 0; i < purchases.length; i++) {
+            document.writeln("<p>" + purchases[i].toString());
+        }
 
-var totalCost = 0;
-var makeS = function(Purchase){
-totalCost += Purchase.getCost();
-}
+        var totalCost = 0;
+        var makeS = function (Purchase) {
+            totalCost += Purchase.getCost();
+        }
 
-for (let index = 0; index < purchases.length; index++) {
-    makeS(purchases[index]);
-}
+        for (let index = 0; index < purchases.length; index++) {
+            makeS(purchases[index]);
+        }
 
-var makeS = function(){
-    return getByn(totalCost);
-}
-    document.writeln("<h2>Total cost</h2>");
-    document.writeln("<h2>"+makeS()+"</h2>");
+        var makeS = function () {
+            return getByn(totalCost);
+        }
+        document.writeln("<h2>Total cost</h2>");
+        document.writeln("<h2>" + makeS() + "</h2>");
 
-</script>
-   <h1>Task 1 - end</h1>
+    </script>
+    <h1>Task 1 - end</h1>
 </body>
-</html>
 
+</html>
