JS add purchse to Task2 and Task3

--- a/06 JavaScript/Task2.html
+++ b/06 JavaScript/Task2.html
@@ -55,6 +55,7 @@
             new Purchase("bread", 320, 4),
             new Purchase("potato", 122, 1),
             new PercentDiscountPurchase("nuts", 123, 3, 4),
+            new PercentDiscountPurchase("cheese", 536, 3, 3),
             new PercentDiscountPurchase("oil", 568, 2, 5)
         ];
 
