--- a/06 JavaScript/Task3.html
+++ b/06 JavaScript/Task3.html
@@ -56,6 +56,7 @@
             new Purchase("bread", 320, 4),
             new Purchase("potato", 122, 1),
             new PriceDiscountPurchase("carrot", 99, 3, 5),
+            new PriceDiscountPurchase("fish", 399, 3, 55),
             new PriceDiscountPurchase("lobster", 999, 1, 99)
         ];
 
