JS change var ... = func to func

--- a/06 JavaScript/Task1.html
+++ b/06 JavaScript/Task1.html
@@ -22,7 +22,7 @@
             }
         }
 
-        var Purchase = function (name, price, number) {
+        function Purchase(name, price, number) {
             this.name = name;
             this.price = price;
             this.number = number;
@@ -34,7 +34,7 @@
             }
         }
 
-        let purchases = [
+        var purchases = [
             new Purchase("apple", 121, 5),
             new Purchase("milk", 101, 3),
             new Purchase("bread", 320, 4),
