--- a/06 JavaScript/Task1.html
+++ b/06 JavaScript/Task1.html
@@ -9,17 +9,8 @@
     <h1>Task 1 - start</h1>
     <script>
 
-        var getByn = function (price) {
-            var str = String(price);
-
-            switch (str.length) {
-                case 1:
-                    return "0.0" + str;
-                case 2:
-                    return "0." + str;
-                default:
-                    return str.substring(0, str.length - 2) + "." + str.substring(str.length - 2);
-            }
+        function getByn(price) {
+            return parseInt(price / 100) + "." + parseInt(price / 10 % 10) + parseInt(price % 10)
         }
 
         function Purchase(name, price, number) {
@@ -41,7 +32,7 @@
             new Purchase("potato", 122, 1)
         ];
 
-        document.writeln("<h2>Purchases</h2>");
+        document.writeln("<h3>Purchases</h3>");
         for (var i = 0; i < purchases.length; i++) {
             document.writeln("<p>" + purchases[i].toString());
         }
@@ -58,8 +49,8 @@
         var makeS = function () {
             return getByn(totalCost);
         }
-        document.writeln("<h2>Total cost</h2>");
-        document.writeln("<h2>" + makeS() + "</h2>");
+        document.writeln("<h3>Total cost</h3>");
+        document.writeln("<h3>" + makeS() + "</h3>");
 
     </script>
     <h1>Task 1 - end</h1>
