--- a/06 JavaScript/Task3.html
+++ b/06 JavaScript/Task3.html
@@ -56,21 +56,22 @@
             document.writeln("<p>" + purchases[i].toString());
         }
 
-        var makeS = function () {
-            var totalCost = 0;
+        var totalCost = function () {
+            var cost = 0;
 
-            var calcCost = function (Purchase) {
-                totalCost += Purchase.getCost();
+            return function (Purchase) {
+                return Purchase === undefined ? cost : cost += Purchase.getCost();
             }
-
-            for (let index = 0; index < purchases.length; index++) {
-                calcCost(purchases[index]);
-            }
-            return getByn(totalCost);
         }
-        
+
+        var makeS = totalCost();
+
+        for (let index = 0; index < purchases.length; index++) {
+            makeS(purchases[index]);
+        }
+
         document.writeln("<h3>Total cost</h3>");
-        document.writeln("<h3>" + makeS() + "</h3>");
+        document.writeln("<h3>" + getByn(makeS()) + "</h3>");
 
     </script>
     <h1>Task 3 - end</h1>
