--- a/project/menu/menu.html
+++ b/project/menu/menu.html
@@ -6,6 +6,9 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <link rel="stylesheet" href="menu.css">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+  integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+  crossorigin="anonymous"></script>
 </head>
 <header>
 <h1>Restaurant</h1>
@@ -20,35 +23,35 @@
         <div class="menuItem close">
           <h2 class="menuItemHeading">Appetizer</h2>
           <div class="menuItemContent">
-            <p>Appetizer</p>
+            <div class="menuItems 0" id="0"></div>
           </div>
         </div>
 
         <div class="menuItem close">
           <h2 class="menuItemHeading">Salads</h2>
           <div class="menuItemContent">
-            <p>Salads</p>
+            <div class="menuItems 1" id="1"></div>
           </div>
         </div>
 
         <div class="menuItem close">
           <h2 class="menuItemHeading">Tapas</h2>
           <div class="menuItemContent">
-            <p>Tapas</p>
+            <div class="menuItems 2" id="2"></div>
           </div>
         </div>
 
         <div class="menuItem close">
           <h2 class="menuItemHeading">Entrees</h2>
           <div class="menuItemContent">
-            <p>Entrees</p>
+            <div id="3"></div>
           </div>
         </div>
 
         <div class="menuItem close">
           <h2 class="menuItemHeading">Beverages</h2>
           <div class="menuItemContent">
-            <p>Beverages</p>
+            <div class="menuItems 4" id="4"></div>
           </div>
         </div>
       </div>
