--- a/project/menu/menu.html
+++ b/project/menu/menu.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -23,21 +22,21 @@
         <div class="menuItem close">
           <h2 class="menuItemHeading">Appetizer</h2>
           <div class="menuItemContent">
-            <div class="menuItems 0" id="0"></div>
+            <div id="0"></div>
           </div>
         </div>
 
         <div class="menuItem close">
           <h2 class="menuItemHeading">Salads</h2>
           <div class="menuItemContent">
-            <div class="menuItems 1" id="1"></div>
+            <div id="1"></div>
           </div>
         </div>
 
         <div class="menuItem close">
           <h2 class="menuItemHeading">Tapas</h2>
           <div class="menuItemContent">
-            <div class="menuItems 2" id="2"></div>
+            <div id="2"></div>
           </div>
         </div>
 
@@ -51,7 +50,7 @@
         <div class="menuItem close">
           <h2 class="menuItemHeading">Beverages</h2>
           <div class="menuItemContent">
-            <div class="menuItems 4" id="4"></div>
+            <div id="4"></div>
           </div>
         </div>
       </div>
